Text edits and minor changes from 7/15/19 feedback

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -29,12 +29,12 @@
             credit ratings and geographic proximity.
         </p>
         <p>
-            In the <a class="pct-static-anchor" id="state-comparison" href="#section-comparison">“State comparison” section</a>, users can compare these data, including
+            In the <a class="pct-static-anchor" id="state-comparison" href="#section-comparison">“State Comparison” section</a>, users can compare these data, including
             debt levels, for any two states, or any state to the U.S. median. In the
-            section labeled <a class="pct-static-anchor" id="fifty-state" href="#section-states">“50-state data,”</a> users can sort and group all 50 states
+            section labeled <a class="pct-static-anchor" id="fifty-state" href="#section-states">“50-State Data,”</a> users can sort and group all 50 states
             using multiple criteria, allowing users to identify groupings using a mix
             of measures. Information about the measures and the underlying data may be
-            found in the <a class="pct-static-anchor" id="fifty-state" href="#section-about">“About the data” section</a> at the bottom of this page.
+            found in the <a class="pct-static-anchor" id="fifty-state" href="#section-about">“About the Data” section</a> at the bottom of this page.
         </p>
         <p>
             States can use these data to select more appropriate peer groups, giving
@@ -389,7 +389,7 @@
                 </a>
                 ; U.S. Bureau of Economic Analysis, “SA1 Personal Income Summary: Personal
                 Income, Population, Per Capita Personal Income,”
-                https://www.bea.gov/data/income-saving/personal-income-by-state
+                <a href="https://www.bea.gov/data/income-saving/personal-income-by-state">https://www.bea.gov/data/income-saving/personal-income-by-state</a>
             </p>
         </div>
         <a name="credit_rating" id="credit_rating"></a>
