Adds instruction note for comparision inputs

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -57,6 +57,7 @@
                     <input autocomplete="off" type="text" id="compare-input-1">
                 </div>
             </div>
+            <p class="compare-instruct">(type in a state name or "U.S. Median" to make a comparison)</p>
         </div>
     </div>
 </section>
