Changes state-local to local-state

--- a/src/partials/sections.html
+++ b/src/partials/sections.html
@@ -203,7 +203,7 @@
         </div>
         <a name="state_local_division" id="state_local_division"></a>
         <h3 class="js-state_local_division">
-            The state-local borrowing division (2015)
+            The local-state borrowing division (2015)
         </h3>
         <p>
             In some states, local governments are responsible for paying for most
@@ -214,7 +214,7 @@
             state debt limits have higher debt levels.<sup>5</sup> This measure compares
             local government borrowing to the combined debt held by the state and local
             governments. Higher numbers indicate a greater share of total debt is held
-            by local governments. The state-local borrowing division ranges from 17.9
+            by local governments. The local-state borrowing division ranges from 17.9
             percent to 88 percent.
         </p>
         <div class="pct-note">
