--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,6 +1,7 @@
 @import 'variable.scss';
-body {
+body, html {
     overflow-x: hidden; 
+    overflow-x: clip; 
 }
 :global(.rich-text #pew-app) {
     @media (max-width: 917px){
